--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/vite": "^4.1.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "tailwindcss": "^4.1.4",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
