--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production && cp ./dist/index.html ./dist/404.html",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
