--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
+    "browser-image-compression": "^2.0.2",
     "lucide-vue-next": "^0.503.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
